--- a/draft.tex
+++ b/draft.tex
@@ -459,7 +459,7 @@ $\left|\begin{tabular}{cccc}
 \vskip.2in
 The second order condition is on the last two principal minors. The largest must be non-positive. The next to last should then be non-negative.
 
-The next-to-last principal minor is the 3x3 matrix that is the upper-lefthand corner of this matrix. This determinant should be non-negative but is identically equal to zero because of the first row of zeros. This therefore provides no restrictions on the problem.\footnote{In the case where it is the non-negativity constraint on either $b_0$ or $b_{-.5}$ that binds, this condition \textit{does} imply an extra constraint. When $b_0 = 0$, the extra constraint is that $\frac{\partial^2 L}{\partial b_{-.5}^2} \geq0$, i.e. $Y\leq 0$. When $b_{-.5}=0$, the extra condition is that $X\leq 0$.}
+The next-to-last principal minor is the 3x3 matrix that is the upper-lefthand corner of this matrix. This determinant should be non-negative but is identically equal to zero because of the first row of zeros. This therefore provides no restrictions on the problem.\footnote{In the case where it is the non-negativity constraint on either $b_0$ or $b_{-.5}$ that binds, this condition \textit{does} imply an extra constraint. When $b_0 = 0$, the extra constraint is that $\frac{\partial^2 L}{\partial b_{-.5}^2} \geq0$, i.e. $Y\leq 0$. When $b_{-.5}=0$, the extra condition is that $X\leq 0$.\label{fn:extra}}
 
 The determinant of the last principal minor, which is the whole 4x4 matrix, must be non-positive. Because of the three zeros in the first row, this determinant can be simplified as follows:
 		\[
@@ -511,28 +511,13 @@ The determinant of the last principal minor, which is the whole 4x4 matrix, must
 			\label{eq:2}
 		\end{equation}
 		
-In this case where the non-negativity constraint binds for the variable associated with $Z$, that is $b\left(\frac{1}{2}\right)$, there are three possibilities, $Z=0$, $Z>0$ and $Z<0$. I will take each in turn.
+In this case where the non-negativity constraint binds for the variable associated with $Z$, that is $b_\frac{1}{2}$, there are three possibilities, $Z=0$, $Z>0$ and $Z<0$. I will take each in turn.
 \begin{enumerate}
-	\item When $Z = 0$, $e^Z = 1$. Then the only values of $X$ and $Y$ with which both Equation~\ref{eq:1} and \ref{eq:2} are consistent are $X=Y$.
-		\begin{itemize}
-			\item Note that this is the only case in which $e^{-2Z} =1$, i.e. $\frac{\partial^2 L}{\partial b\left(-\frac{1}{2}\right)\partial b\left(0\right)} = 0$. In the other two cases, the right hand side of \ref{eq:soc} is positive so that the two second derivatives on the left hand side must be either both positive or both negative. This means that $X$ and $Y$ must be either both positive or both negative.
-		\end{itemize}
-	\item When $Z > 0$, $e^Z > 1$. In this case, $X$ and $Y$ must be positive since they are greater than $Z$.
-		\begin{itemize}
-			\item Equation~\ref{eq:1} is consistent with $Y\geq X\geq 0$.
-			\item Equation~\ref{eq:2} is consistent with $X \geq Y \geq 0$.
-			\item Since both equations must hold, we have $X=Y \geq 0$
-		\end{itemize}
-	\item When $Z < 0$, $e^Z < 1$. In this case,
-			\begin{itemize}
-				\item Equation~\ref{eq:1} is consistent with $X\geq Y\geq 0$ or $0 \geq Y \geq X$.
-				\item Equation~\ref{eq:2} is consistent with $Y \geq X \geq 0$ or $0 \geq X \geq Y$.
-				\item Since both equations must hold, we have either $X=Y \geq 0$ or $X=Y \leq 0$
-		\end{itemize}
+	\item $Z = 0$, $e^Z = 1$. Then the only values of $X$ and $Y$ with which both Equation~\ref{eq:1} and \ref{eq:2} are consistent are $X=Y$.\footnote{Note that this is the only case in which $e^{-2Z} =1$, i.e. $\frac{\partial^2 L}{\partial b_{-\frac{1}{2}} \partial b_0} = 0$. In the other two cases, the right hand side of \ref{eq:soc} is strictly positive so that the two second derivatives on the left hand side must be either both positive or both negative. This means that $X$ and $Y$ must be either both positive or both negative.}
+	\item $Z > 0$, $e^Z > 1$. In this case, $X$ and $Y$ must be positive since they are greater than $Z$. Equation~\ref{eq:1} is consistent only with $Y\geq X\geq 0$, while Equation~\ref{eq:2} is consistent with $X \geq Y \geq 0$. Since both equations must hold, we have $X=Y \geq 0$.
+	\item $Z < 0$, $e^Z < 1$. In this case, Equation~\ref{eq:1} is consistent with $X\geq Y\geq 0$ or $0 \geq Y \geq X$. Equation~\ref{eq:2} is consistent with $Y \geq X \geq 0$ or $0 \geq X \geq Y$. Since both equations must hold, we have either $X=Y \geq 0$ or $X=Y \leq 0$.
 \end{enumerate}
-		
-		
-$\hfill\blacksquare$
+		In any case, it must be that $X = Y$. Similar, slightly simpler proofs go through when the zero bribe is for either of the other two legislators because of the extra condition described in Footnote~\ref{fn:extra}. $\hfill\blacksquare$
 
 \vskip.3in
 \noindent \textbf{\hypertarget{Pr_3NNB}{Proof of Proposition~\ref{prop:3NNB}}}:
